# openclaw-hobby

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml
agent/: HEARTBEAT.md  SOUL.md  TOOLS.md
config/: mind-state.example.json  moltbot.example.json  podcast.example.json  twitter.example.json  user-signals.example.json  youtube.example.json
daemons/podcast/: daemon.py  podcast_api.py
daemons/twitter/: daemon.py  twitter_api.py
daemons/youtube/: daemon.py  youtube_api.py
docs/: architecture.md  customization.md  deployment.md  heartbeat-deep-dive.md  lessons-learned.md
hobee/: __init__.py  cli.py  config.py  daemon.py  logging_utils.py
hobee/storage/: __init__.py  base.py  feishu.py  sqlite.py
scripts/: generate-agent-files.sh  setup-crons.sh  setup.sh
systemd/: hobby-podcast.service  hobby-twitter.service  hobby-watchdog.service  hobby-youtube.service  install.sh  openclaw-gateway.service
tests/: conftest.py  test_config.py  test_daemon_helpers.py  test_podcast_api.py  test_sqlite_backend.py  test_triage_parsing.py  test_watchdog_remediation.py
triage/: triage_helper.py
watchdog/: watchdog.py
